# rust-parsepatch

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  parser.rs
tests/: generate.py  mc.rs  test.rs
tests/output/: 044115544bf6.json  0d6969b2a955.json  6f5fc0d644dd.json  77ec8a41ee73.json  7dabae5e261a.json  7e60ad275b73.json  81d3e4a2f3f3.json  D174915.json  b184c87f7606.json  b3a7561624f9_modified.json  b583dd397599.json  b8802b591ce2.json  basic.json  c4c0ad8b3eaa.json  c58e9e70f971.json  c6f9187b0b2e.json  d12b0a6c7641.json  d4f80c4ba719.json  d7a700707ddb.json  d8571fb523a0.json  dfe0b0d0827e.json  ea8bdd612f43.json  empty.json  f045ac9f76cf.json  issue68.json  janx.json  new_file_with_git.json  no_git_header.json
tests/patches/: 044115544bf6.patch  0d6969b2a955.patch  6f5fc0d644dd.patch  77ec8a41ee73.patch  7dabae5e261a.patch  7e60ad275b73.patch  81d3e4a2f3f3.patch  D174915.patch  b184c87f7606.patch  b3a7561624f9.patch  b3a7561624f9_modified.patch  b583dd397599.patch  b8802b591ce2.patch  basic.patch  c4c0ad8b3eaa.patch  c58e9e70f971.patch  c6f9187b0b2e.patch  d12b0a6c7641.patch  d4f80c4ba719.patch  d7a700707ddb.patch  d8571fb523a0.patch  dfe0b0d0827e.patch  ea8bdd612f43.patch  f045ac9f76cf.patch  f9b391e62608.patch  issue68.patch  janx.patch  new_file_with_git.patch  no_git_header.patch
