[package]
name = "parsepatch"
version = "0.1.1"
edition = "2018"
authors = ["calixteman <cdenizet@mozilla.com>"]
repository = "https://github.com/mozilla/rust-parsepatch"
documentation = "https://docs.rs/parsepatch/"
keywords = ["patch", "git"]
description = "Parse git patch."
license = "MPL-2.0"

[dependencies]

[dev-dependencies]
chardet = "0.2"
encoding = "0.2.33"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
name = "parsepatch"
path = "src/lib.rs"