[package]
name = "parsepatch"
version = "0.2.8"
edition = "2018"
authors = ["calixteman <cdenizet@mozilla.com>"]
repository = "https://github.com/mozilla/rust-parsepatch"
documentation = "https://docs.rs/parsepatch/"
keywords = ["patch", "git"]
description = "Parse git patch."
license = "MPL-2.0"

[dependencies]
log = "0.4"

[dev-dependencies]
chardet = "0.2"
crossbeam = "^0.7"
encoding = "0.2"
num_cpus = "^1.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.8"
hglib-rs = "0.1"
indicatif = "0.16"

[lib]
name = "parsepatch"
path = "src/lib.rs"
